--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,15 @@ fastapi = "^0.115.2"
 passlib = "^1.7.4"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.12"
+pytest = "^8.3.3"
+httpx = "^0.27.2"
+anyio = "^4.6.2.post1"
+pytest-asyncio = "^0.24.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
