--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pytest = "^8.3.3"
 httpx = "^0.27.2"
 anyio = "^4.6.2.post1"
 pytest-asyncio = "^0.24.0"
+apscheduler = "^3.10.4"
+aiohttp = "^3.10.10"
 
 
 [build-system]
